fix up some mobile layout bugs

--- a/src/assets/scss/components/_building-block-iframe.scss
+++ b/src/assets/scss/components/_building-block-iframe.scss
@@ -1,5 +1,7 @@
 .building-block-iframe {
   position: absolute; /* To fix iframe's hight in Edge */
+  left: 0;
+  top: 0;
   display: block;
   width: 100%;
   min-height: 100%; /* To fix iframe's hight in Edge */
